<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_movies_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:backgroundTint="@color/background"
    tools:context=".FragmentMoviesItem">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="8dp" />

        <ImageView
            android:id="@+id/imMovieImage"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/movie1"
            tools:src = "@drawable/baseline_autorenew_24"
            app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="@id/gl_top" />

        <ImageView
            android:id="@+id/im_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/like"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintTop_toTopOf="@id/gl_top" />

        <TextView
            android:id="@+id/tv_ageLimit"
            style="@style/TextView.PG"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvAge"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="@id/gl_top" />

        <TextView
            android:id="@+id/tv_teg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tvTeg"
            android:textColor="@color/pink"
            android:textSize="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
            app:layout_constraintStart_toStartOf="@+id/gl_start" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/star_icon_grey_"
            android:numStars="5"
            android:progressTint="@color/pink"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:stepSize="1"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_movieName"
            app:layout_constraintStart_toStartOf="@+id/gl_start" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="125 reviews"
            android:textColor="@color/grey"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@+id/tv_teg"
            app:layout_constraintTop_toBottomOf="@+id/tv_teg" />

        <TextView
            android:id="@+id/tv_movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/tvName"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_duration"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="@+id/gl_start" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/tvDuration"
            android:textColor="@color/grey"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
            app:layout_constraintStart_toStartOf="@+id/gl_start" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imMoreInfo"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/more_info"
            app:layout_constraintEnd_toStartOf="@+id/im_like"
            app:layout_constraintTop_toTopOf="@+id/gl_top" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>